public class PhysicalCharacteristicsDto
{
	public double Length { get; set; }
	public double Depth { get; set; }
	public double Draft { get; set; }
}